[package]
name = "nexus-rs_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.43"
paste = "1.0.8"

[dependencies.syn]
version = "2.0.39"
features = ["full"]
