[package]
name = "nexus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcdps-imgui = { version = "0.8.0", features = ["tables-api"] }
bitflags = "2.4.1"
winapi = { version = "0.3.9", features = ["d3d11"] }

[[example]]
name = "debug"
crate-type = ["cdylib"]
