[package]
name = "nexus-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcdps-imgui = { version = "0.8.0", features = ["tables-api"] }
bitflags = "2.4.1"
windows = { version = "0.52.0", features = ["Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi"] }
log = { version = "0.4.20", optional = true }
rand = "0.8.5"
once_cell = "1.18.0"

[[example]]
name = "debug"
crate-type = ["cdylib"]

[[example]]
name = "dvd"
crate-type = ["cdylib"]

[features]
default = ["log"]
